# libfilatti

./: .gitignore  CMakeLists.txt  README.md
include/filatti/: adjustment.hpp  brightness.hpp  color_balance.hpp  contract.hpp  contrast.hpp  curves.hpp  dirty.hpp  exception.hpp  exposure.hpp  grayscale.hpp  highlight_shadow.hpp  hls.hpp  hsv.hpp  rebuild.hpp  saturation.hpp  sharpen.hpp  sharpness.hpp  synchronous.hpp  temperature.hpp  tilt_shift.hpp  vibrance.hpp  vignette.hpp  white_balance.hpp
lib/: CMakeLists.txt  brightness.cpp  color_balance.cpp  contrast.cpp  curves.cpp  exposure.cpp  grayscale.cpp  highlight_shadow.cpp  hls.cpp  hsv.cpp  saturation.cpp  sharpen.cpp  sharpness.cpp  spline.hpp  temperature.cpp  tilt_shift.cpp  vibrance.cpp  vignette.cpp  white_balance.cpp
lib/gradient/: gradient.hpp  linear.cpp  linear.hpp  radial.cpp  radial.hpp
lib/interpolator/: element.cpp  element.hpp  interpolator.cpp  interpolator.hpp  linear.cpp  linear.hpp  spline.cpp  spline.hpp
tests/: CMakeLists.txt  brightness_test.cpp  color_balance_test.cpp  contrast_test.cpp  curves_test.cpp  exposure_test.cpp  grayscale_test.cpp  highlight_shadow_test.cpp  hls_test.cpp  hsv_test.cpp  linear_gradient_test.cpp  radial_gradient_test.cpp  saturation_test.cpp  sharpen_test.cpp  sharpness_test.cpp  temperature_test.cpp  test.hpp  tilt_shift_test.cpp  vibrance_test.cpp  vignette_test.cpp  white_balance_test.cpp
